refactor(BinaryHeader, ASTBuilder): 引入Symbol类替换旧有的索引方式并优化字段存储
此提交通过引入新的`Symbol`类替代原有的字符串常量索引来增强代码的可读性和维护性。同时调整了一些字段的处理逻辑，使其更加一致和高效。