@@ -3,6 +3,7 @@ package io.github.leo1024.otrvm.parser;
 import io.github.leo1024.otrvm.ISerializable;
 import io.github.leo1024.otrvm.conf.FuncMeta;
 import io.github.leo1024.otrvm.conf.FieldMeta;
+import io.github.leo1024.otrvm.conf.Symbol;
 import io.github.leo1024.otrvm.ex.ParserException;
 import io.github.leo1024.otrvm.parser.impl.FuncExpr;
 import io.github.leo1024.otrvm.util.ByteUtil;
@@ -11,13 +12,13 @@ import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 public class ASTBuilder extends Context {
-    public record StrConst(String value) implements ISerializable {
+    public record Const(String value) implements ISerializable {
 
         @Override
         public byte[] toBytes() {
             byte[] strBytes = value.getBytes(StandardCharsets.UTF_8);
             int strBytesLen = strBytes.length;
-            // Type + Length + data length
+            // Length + data length
             byte[] bytes = new byte[4 + strBytesLen];
             int pos = ByteUtil.appendInt2Bytes(bytes, 0, strBytesLen);
             System.arraycopy(strBytes, 0, bytes, pos, strBytesLen);
@@ -26,7 +27,7 @@ public class ASTBuilder extends Context {
 
         @Override
         public boolean equals(Object obj) {
-            if (obj instanceof StrConst(String value1)) {
+            if (obj instanceof Const(String value1)) {
                 return value.equals(value1);
             }
             return false;
@@ -38,59 +39,59 @@ public class ASTBuilder extends Context {
         }
     }
 
-    final Map<String, FieldMeta> fileMetaMap;
-    final int filename;
-    final int namespace;
-    final List<StrConst> constants;
-    int library;
+    final Symbol filename;
+    final Symbol namespace;
+    final List<Const> constants;
+    final List<FieldMeta> fieldMetaList;
+    Symbol library;
 
     public ASTBuilder(final String namespace, final String filename) {
         super(null);
-        this.library = -1;
-        this.fileMetaMap = new TreeMap<>();
+        this.library = null;
         this.constants = new ArrayList<>();
+        this.fieldMetaList = new ArrayList<>();
         this.filename = this.addConstant(filename);
         this.namespace = this.addConstant(namespace);
     }
 
     @Override
     public void addField(FieldMeta fieldMeta) {
-        final String name = fieldMeta.getName();
-        if (fileMetaMap.containsKey(name)) {
+        final Symbol name = fieldMeta.getName();
+        if (this.fieldMetaList.contains(fieldMeta)) {
             throw new ParserException("Field '" + name + "' already exists.");
         }
-        this.fileMetaMap.put(name, fieldMeta);
+        this.fieldMetaList.add(fieldMeta);
     }
 
     public List<FieldMeta> getFieldList() {
-        return List.copyOf(this.fileMetaMap.values());
+        return Collections.unmodifiableList(this.fieldMetaList);
     }
 
     public List<FuncMeta> getFuncList() {
         return this.getExprList()
-                .stream()
-                .filter(it -> it instanceof FuncExpr)
-                .map(it -> ((FuncExpr) it).getFuncMeta())
-                .toList();
+            .stream()
+            .filter(it -> it instanceof FuncExpr)
+            .map(it -> ((FuncExpr)it).getFuncMeta())
+            .toList();
     }
 
     @Override
-    public int getNamespace() {
+    public Symbol getNamespace() {
         return namespace;
     }
 
     @Override
-    public int addConstant(String value) {
-        StrConst constant = new StrConst(value);
+    public Symbol addConstant(String value) {
+        Const constant = new Const(value);
         int index = this.constants.indexOf(constant);
         if (index == -1) {
             index = this.constants.size();
             this.constants.add(constant);
         }
-        return index;
+        return new Symbol(index, value);
     }
 
-    public List<StrConst> getConstants() {
+    public List<Const> getConstants() {
         return Collections.unmodifiableList(this.constants);
     }
 
@@ -98,8 +99,8 @@ public class ASTBuilder extends Context {
         List<FuncMeta> funcList = getFuncList();
         for (int i = 0; i < funcList.size(); i++) {
             FuncMeta funcMeta = funcList.get(i);
-            StrConst strConst = getConstant(funcMeta.getName());
-            if (strConst.value.equals(funcName)) {
+            Symbol symbol = funcMeta.getName();
+            if (symbol.valueEqual(funcName)) {
                 return i;
             }
         }
@@ -107,19 +108,19 @@ public class ASTBuilder extends Context {
     }
 
     @Override
-    public StrConst getConstant(int index) {
+    public Const getConstant(int index) {
         return this.constants.get(index);
     }
 
-    public void setLibrary(int library) {
+    public void setLibrary(Symbol library) {
         this.library = library;
     }
 
-    public int getLibrary() {
+    public Symbol getLibrary() {
         return library;
     }
 
-    public int getFilename() {
+    public Symbol getFilename() {
         return filename;
     }
 }
